# flask-rabbitmq-evenetdriven-example

./: .gitignore  docker-compose.yaml
consumer/: Dockerfile  consumer.py  entrypoint.sh  pyproject.toml  requirements.txt
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/project/: __init__.py  config.py
server/project/apis/: __init__.py  healthcheck.py  produce.py
server/project/producer/: client.py
